project(relive_lib VERSION 0.1 LANGUAGES CXX)

SET(AliveLibSrcAO
   ../AliveLibAO/Font.hpp
   ../AliveLibAO/Font.cpp
   ../AliveLibAO/Midi.hpp
   ../AliveLibAO/Midi.cpp
   ../AliveLibAO/Sfx.hpp
   ../AliveLibAO/Sfx.cpp
   ../AliveLibAO/Math.hpp
   ../AliveLibAO/Math.cpp
   ../AliveLibAO/StringFormatters.hpp
   ../AliveLibAO/StringFormatters.cpp
   ../AliveLibAO/GameAutoPlayer.cpp
   ../AliveLibAO/GameAutoPlayer.hpp
   ../AliveLibAO/PathDataExtensions.hpp
   ../AliveLibAO/PathDataExtensions.cpp
   ../AliveLibAO/Game.hpp
   ../AliveLibAO/Game.cpp
   ../AliveLibAO/Map.hpp
   ../AliveLibAO/Map.cpp
   ../AliveLibAO/Sound.hpp
   ../AliveLibAO/Sound.cpp
   ../AliveLibAO/SaveGame.hpp
   ../AliveLibAO/SaveGame.cpp
   ../AliveLibAO/CameraSwapper.hpp
   ../AliveLibAO/CameraSwapper.cpp
   ../AliveLibAO/Input.hpp
   ../AliveLibAO/Input.cpp
   ../AliveLibAO/PauseMenu.hpp
   ../AliveLibAO/PauseMenu.cpp
   ../AliveLibAO/Path.hpp
   ../AliveLibAO/Path.cpp
   ../AliveLibAO/DDCheat.hpp
   ../AliveLibAO/DDCheat.cpp
   ../AliveLibAO/DemoPlayback.hpp
   ../AliveLibAO/DemoPlayback.cpp
   ../AliveLibAO/SwitchStateBooleanLogic.hpp
   ../AliveLibAO/SwitchStateBooleanLogic.cpp
   ../AliveLibAO/OneShotSwitchIdSetter.hpp
   ../AliveLibAO/OneShotSwitchIdSetter.cpp
   ../AliveLibAO/GameEnderController.hpp
   ../AliveLibAO/GameEnderController.cpp
   ../AliveLibAO/MovingBomb.hpp
   ../AliveLibAO/MovingBomb.cpp
   ../AliveLibAO/ScreenWave.hpp
   ../AliveLibAO/ScreenWave.cpp
   ../AliveLibAO/UXB.hpp
   ../AliveLibAO/UXB.cpp
   ../AliveLibAO/LCDScreen.hpp
   ../AliveLibAO/LCDScreen.cpp
   ../AliveLibAO/MainMenu.hpp
   ../AliveLibAO/MainMenu.cpp
   ../AliveLibAO/MainMenuTransition.hpp
   ../AliveLibAO/MainMenuTransition.cpp
   ../AliveLibAO/Door.hpp
   ../AliveLibAO/Door.cpp
   ../AliveLibAO/HintFly.hpp
   ../AliveLibAO/HintFly.cpp
   ../AliveLibAO/TrapDoor.hpp
   ../AliveLibAO/TrapDoor.cpp
   ../AliveLibAO/MeatSaw.hpp
   ../AliveLibAO/MeatSaw.cpp
   ../AliveLibAO/Grenade.hpp
   ../AliveLibAO/Grenade.cpp
   ../AliveLibAO/FlintLockFire.hpp
   ../AliveLibAO/FlintLockFire.cpp
   ../AliveLibAO/SlingMudokon.hpp
   ../AliveLibAO/SlingMudokon.cpp
   ../AliveLibAO/Mudokon.hpp
   ../AliveLibAO/Mudokon.cpp
   ../AliveLibAO/Slig.hpp
   ../AliveLibAO/Slig.cpp
   ../AliveLibAO/Slog.hpp
   ../AliveLibAO/Slog.cpp
   ../AliveLibAO/Scrab.hpp
   ../AliveLibAO/Scrab.cpp
   ../AliveLibAO/Paramite.hpp
   ../AliveLibAO/Paramite.cpp
   ../AliveLibAO/LCDStatusBoard.hpp
   ../AliveLibAO/LCDStatusBoard.cpp
   ../AliveLibAO/ParamiteWeb.hpp
   ../AliveLibAO/ParamiteWeb.cpp
   ../AliveLibAO/Shrykull.hpp
   ../AliveLibAO/Shrykull.cpp
   ../AliveLibAO/BoomMachine.hpp
   ../AliveLibAO/BoomMachine.cpp
   ../AliveLibAO/DoorFlame.hpp
   ../AliveLibAO/DoorFlame.cpp
   ../AliveLibAO/SlogSpawner.hpp
   ../AliveLibAO/SlogSpawner.cpp
   ../AliveLibAO/AbilityRing.hpp
   ../AliveLibAO/AbilityRing.cpp
   ../AliveLibAO/BirdPortal.hpp
   ../AliveLibAO/BirdPortal.cpp
   ../AliveLibAO/Well.hpp
   ../AliveLibAO/Well.cpp
   ../AliveLibAO/Rock.hpp
   ../AliveLibAO/Rock.cpp
   ../AliveLibAO/RockSack.hpp
   ../AliveLibAO/RockSack.cpp
   ../AliveLibAO/BackgroundGlukkon.hpp
   ../AliveLibAO/BackgroundGlukkon.cpp
   ../AliveLibAO/SecurityDoor.hpp
   ../AliveLibAO/SecurityDoor.cpp
   ../AliveLibAO/Lever.hpp
   ../AliveLibAO/Lever.cpp
   ../AliveLibAO/RollingBall.hpp
   ../AliveLibAO/RollingBall.cpp
   ../AliveLibAO/HoistRocksEffect.hpp
   ../AliveLibAO/HoistRocksEffect.cpp
   ../AliveLibAO/FootSwitch.hpp
   ../AliveLibAO/FootSwitch.cpp
   ../AliveLibAO/FallingItem.hpp
   ../AliveLibAO/FallingItem.cpp
   ../AliveLibAO/InvisibleSwitch.hpp
   ../AliveLibAO/InvisibleSwitch.cpp
   ../AliveLibAO/Rope.hpp
   ../AliveLibAO/Rope.cpp
   ../AliveLibAO/PullRingRope.hpp
   ../AliveLibAO/PullRingRope.cpp
   ../AliveLibAO/TimerTrigger.hpp
   ../AliveLibAO/TimerTrigger.cpp
   ../AliveLibAO/BellSong.hpp
   ../AliveLibAO/BellSong.cpp
   ../AliveLibAO/HoneySack.hpp
   ../AliveLibAO/HoneySack.cpp
   ../AliveLibAO/Honey.hpp
   ../AliveLibAO/Honey.cpp
   ../AliveLibAO/HoneyDrip.hpp
   ../AliveLibAO/HoneyDrip.cpp
   ../AliveLibAO/BeeNest.hpp
   ../AliveLibAO/BeeNest.cpp
   ../AliveLibAO/BeeSwarmHole.hpp
   ../AliveLibAO/BeeSwarmHole.cpp
   ../AliveLibAO/BeeSwarm.hpp
   ../AliveLibAO/BeeSwarm.cpp
   ../AliveLibAO/MotionDetector.hpp
   ../AliveLibAO/MotionDetector.cpp
   ../AliveLibAO/SecurityClaw.hpp
   ../AliveLibAO/SecurityClaw.cpp
   ../AliveLibAO/SecurityOrb.hpp
   ../AliveLibAO/SecurityOrb.cpp
   ../AliveLibAO/Electrocute.hpp
   ../AliveLibAO/Electrocute.cpp
   ../AliveLibAO/MusicTrigger.hpp
   ../AliveLibAO/MusicTrigger.cpp
   ../AliveLibAO/ElectricWall.hpp
   ../AliveLibAO/ElectricWall.cpp
   ../AliveLibAO/Meat.hpp
   ../AliveLibAO/Meat.cpp
   ../AliveLibAO/MeatSack.hpp
   ../AliveLibAO/MeatSack.cpp
   ../AliveLibAO/CreditsController.hpp
   ../AliveLibAO/CreditsController.cpp
   ../AliveLibAO/Bells.hpp
   ../AliveLibAO/Bells.cpp
   ../AliveLibAO/ChimeLock.hpp
   ../AliveLibAO/ChimeLock.cpp
   ../AliveLibAO/Bullet.hpp
   ../AliveLibAO/Bullet.cpp
   ../AliveLibAO/LiftPoint.hpp
   ../AliveLibAO/LiftPoint.cpp
   ../AliveLibAO/LightEffect.hpp
   ../AliveLibAO/LightEffect.cpp
   ../AliveLibAO/DoorLight.hpp
   ../AliveLibAO/DoorLight.cpp
   ../AliveLibAO/LiftMover.hpp
   ../AliveLibAO/LiftMover.cpp
   ../AliveLibAO/BellHammer.hpp
   ../AliveLibAO/BellHammer.cpp
   ../AliveLibAO/Bat.hpp
   ../AliveLibAO/Bat.cpp
   ../AliveLibAO/Slig.hpp
   ../AliveLibAO/Slig.cpp
   ../AliveLibAO/SligSpawner.hpp
   ../AliveLibAO/SligSpawner.cpp
   ../AliveLibAO/PathData.hpp
   ../AliveLibAO/PathData.cpp
   ../AliveLibAO/AnimationCallBacks.cpp
   ../AliveLibAO/AnimationCallBacks.hpp
   ../AliveLibAO/Factory.hpp
   ../AliveLibAO/Factory.cpp
   ../AliveLibAO/GasCountDown.hpp
   ../AliveLibAO/GasCountDown.cpp
   ../AliveLibAO/Movie.hpp
   ../AliveLibAO/Movie.cpp
   ../AliveLibAO/MusicController.hpp
   ../AliveLibAO/MusicController.cpp
   ../AliveLibAO/CheatController.hpp
   ../AliveLibAO/CheatController.cpp
   ../AliveLibAO/GameSpeak.hpp
   ../AliveLibAO/GameSpeak.cpp
   ../AliveLibAO/Abe.hpp
   ../AliveLibAO/Abe.cpp
   ../AliveLibAO/RollingBallStopper.hpp
   ../AliveLibAO/RollingBallStopper.cpp
   ../AliveLibAO/ThrowableArray.hpp
   ../AliveLibAO/ThrowableArray.cpp
   ../AliveLibAO/Elum.hpp
   ../AliveLibAO/Elum.cpp
   ../AliveLibAO/ZBall.hpp
   ../AliveLibAO/ZBall.cpp
   ../AliveLibAO/RollingBallShaker.hpp
   ../AliveLibAO/RollingBallShaker.cpp
   ../AliveLibAO/BoomMachinePipe.hpp
   ../AliveLibAO/BoomMachinePipe.cpp
)

SET(AliveLibAESrc
    ../AliveLibAE/GameAutoPlayer.hpp
    ../AliveLibAE/GameAutoPlayer.cpp
    ../AliveLibAE/PathDataExtensions.cpp
    ../AliveLibAE/PathDataExtensions.hpp
    ../AliveLibAE/Input.cpp
    ../AliveLibAE/Input.hpp
    ../AliveLibAE/VGA.cpp
    ../AliveLibAE/VGA.hpp
    ../AliveLibAE/PsxRender.cpp
    ../AliveLibAE/PsxRender.hpp
    ../AliveLibAE/Math.cpp
    ../AliveLibAE/Math.hpp
    ../AliveLibAE/GameSpeak.hpp
    ../AliveLibAE/GameSpeak.cpp
    ../AliveLibAE/DDCheat.hpp
    ../AliveLibAE/DDCheat.cpp
    ../AliveLibAE/Sfx.hpp
    ../AliveLibAE/Sfx.cpp
    ../AliveLibAE/Game.cpp
    ../AliveLibAE/Game.hpp
    ../AliveLibAE/stdlib.cpp
    ../AliveLibAE/stdlib.hpp
    ../AliveLibAE/CreditsController.cpp
    ../AliveLibAE/CreditsController.hpp
    ../AliveLibAE/PauseMenu.cpp
    ../AliveLibAE/PauseMenu.hpp
    ../AliveLibAE/Map.cpp
    ../AliveLibAE/Map.hpp
    ../AliveLibAE/AnimationCallBacks.cpp
    ../AliveLibAE/AnimationCallBacks.hpp
    ../AliveLibAE/PathData.cpp
    ../AliveLibAE/PathData.hpp
    ../AliveLibAE/Io.cpp
    ../AliveLibAE/Io.hpp
    ../AliveLibAE/Resources.hpp
    ../AliveLibAE/Resources.cpp
    ../AliveLibAE/Font.hpp
    ../AliveLibAE/Font.cpp
    ../AliveLibAE/StringFormatters.hpp
    ../AliveLibAE/StringFormatters.cpp
    ../AliveLibAE/Abe.hpp
    ../AliveLibAE/Abe.cpp
    ../AliveLibAE/MusicController.hpp
    ../AliveLibAE/MusicController.cpp
    ../AliveLibAE/Path.hpp
    ../AliveLibAE/Path.cpp
    ../AliveLibAE/QuikSave.hpp
    ../AliveLibAE/QuikSave.cpp
    ../AliveLibAE/Factory.hpp
    ../AliveLibAE/Factory.cpp
    ../AliveLibAE/MainMenu.hpp
    ../AliveLibAE/MainMenu.cpp
    ../AliveLibAE/LCDScreen.hpp
    ../AliveLibAE/LCDScreen.cpp
    ../AliveLibAE/LCDStatusBoard.hpp
    ../AliveLibAE/LCDStatusBoard.cpp
    ../AliveLibAE/CheatController.hpp
    ../AliveLibAE/CheatController.cpp
    ../AliveLibAE/Compression.hpp
    ../AliveLibAE/Compression.cpp
    ../AliveLibAE/Movie.hpp
    ../AliveLibAE/Movie.cpp
    ../AliveLibAE/CameraSwapper.cpp
    ../AliveLibAE/CameraSwapper.hpp
    ../AliveLibAE/MainMenuTransition.hpp
    ../AliveLibAE/MainMenuTransition.cpp
    ../AliveLibAE/Text.cpp
    ../AliveLibAE/Text.hpp
    ../AliveLibAE/ThrowableArray.cpp
    ../AliveLibAE/ThrowableArray.hpp
    ../AliveLibAE/UXB.cpp
    ../AliveLibAE/UXB.hpp
    ../AliveLibAE/TrapDoor.cpp
    ../AliveLibAE/TrapDoor.hpp
    ../AliveLibAE/MusicTrigger.cpp
    ../AliveLibAE/MusicTrigger.hpp
    ../AliveLibAE/InvisibleEffect.cpp
    ../AliveLibAE/InvisibleEffect.hpp
    ../AliveLibAE/AbilityRing.cpp
    ../AliveLibAE/AbilityRing.hpp
    ../AliveLibAE/PullRingRope.hpp
    ../AliveLibAE/PullRingRope.cpp
    ../AliveLibAE/HoistRocksEffect.hpp
    ../AliveLibAE/HoistRocksEffect.cpp
    ../AliveLibAE/Door.hpp
    ../AliveLibAE/Door.cpp
    ../AliveLibAE/WorkWheel.hpp
    ../AliveLibAE/WorkWheel.cpp
    ../AliveLibAE/StatusLight.hpp
    ../AliveLibAE/StatusLight.cpp
    ../AliveLibAE/WheelSyncer.hpp
    ../AliveLibAE/WheelSyncer.cpp
    ../AliveLibAE/LevelLoader.hpp
    ../AliveLibAE/LevelLoader.cpp
    ../AliveLibAE/InvisibleSwitch.hpp
    ../AliveLibAE/InvisibleSwitch.cpp
    ../AliveLibAE/Lever.hpp
    ../AliveLibAE/Lever.cpp
    ../AliveLibAE/MultiSwitchController.hpp
    ../AliveLibAE/MultiSwitchController.cpp
    ../AliveLibAE/Drill.cpp
    ../AliveLibAE/Drill.hpp
    ../AliveLibAE/Teleporter.cpp
    ../AliveLibAE/Teleporter.hpp
    ../AliveLibAE/SlamDoor.hpp
    ../AliveLibAE/SlamDoor.cpp
    ../AliveLibAE/Well.hpp
    ../AliveLibAE/Well.cpp
    ../AliveLibAE/Water.hpp
    ../AliveLibAE/Water.cpp
    ../AliveLibAE/Rope.hpp
    ../AliveLibAE/Rope.cpp
    ../AliveLibAE/LiftPoint.cpp
    ../AliveLibAE/LiftPoint.hpp
    ../AliveLibAE/LiftMover.cpp
    ../AliveLibAE/LiftMover.hpp
    ../AliveLibAE/TimerTrigger.cpp
    ../AliveLibAE/TimerTrigger.hpp
    ../AliveLibAE/FootSwitch.cpp
    ../AliveLibAE/FootSwitch.hpp
    ../AliveLibAE/BrewMachine.cpp
    ../AliveLibAE/BrewMachine.hpp
    ../AliveLibAE/FallingItem.cpp
    ../AliveLibAE/FallingItem.hpp
    ../AliveLibAE/MineCar.cpp
    ../AliveLibAE/MineCar.hpp
    ../AliveLibAE/ElectricWall.cpp
    ../AliveLibAE/ElectricWall.hpp
    ../AliveLibAE/Electrocute.cpp
    ../AliveLibAE/Electrocute.hpp
    ../AliveLibAE/EvilFart.cpp
    ../AliveLibAE/EvilFart.hpp
    ../AliveLibAE/DemoPlayback.cpp
    ../AliveLibAE/DemoPlayback.hpp
    ../AliveLibAE/SecurityOrb.cpp
    ../AliveLibAE/SecurityOrb.hpp
    ../AliveLibAE/Greeter.hpp
    ../AliveLibAE/Greeter.cpp
    ../AliveLibAE/MotionDetector.hpp
    ../AliveLibAE/MotionDetector.cpp
    ../AliveLibAE/Slurg.cpp
    ../AliveLibAE/Slurg.hpp
    ../AliveLibAE/SlurgSpawner.cpp
    ../AliveLibAE/SlurgSpawner.hpp
    ../AliveLibAE/FlyingSlig.cpp
    ../AliveLibAE/FlyingSlig.hpp
    ../AliveLibAE/FlyingSligSpawner.cpp
    ../AliveLibAE/FlyingSligSpawner.hpp
    ../AliveLibAE/Mudokon.cpp
    ../AliveLibAE/Mudokon.hpp
    ../AliveLibAE/BirdPortal.cpp
    ../AliveLibAE/BirdPortal.hpp
    ../AliveLibAE/TorturedMudokon.cpp
    ../AliveLibAE/TorturedMudokon.hpp
    ../AliveLibAE/DoorBlocker.cpp
    ../AliveLibAE/DoorBlocker.hpp
    ../AliveLibAE/SlapLock.cpp
    ../AliveLibAE/SlapLock.hpp
    ../AliveLibAE/SlapLockWhirlWind.cpp
    ../AliveLibAE/SlapLockWhirlWind.hpp
    ../AliveLibAE/Glukkon.cpp
    ../AliveLibAE/Glukkon.hpp
    ../AliveLibAE/MovingBomb.hpp
    ../AliveLibAE/MovingBomb.cpp
    ../AliveLibAE/DoorFlame.cpp
    ../AliveLibAE/DoorFlame.hpp
    ../AliveLibAE/CrawlingSlig.cpp
    ../AliveLibAE/CrawlingSlig.hpp
    ../AliveLibAE/Fleech.cpp
    ../AliveLibAE/Fleech.hpp
    ../AliveLibAE/Scrab.cpp
    ../AliveLibAE/Scrab.hpp
    ../AliveLibAE/Paramite.hpp
    ../AliveLibAE/Paramite.cpp
    ../AliveLibAE/Slog.hpp
    ../AliveLibAE/Slog.cpp
    ../AliveLibAE/Slig.hpp
    ../AliveLibAE/Slig.cpp
    ../AliveLibAE/GasCountDown.hpp
    ../AliveLibAE/GasCountDown.cpp
    ../AliveLibAE/GlukkonSwitch.hpp
    ../AliveLibAE/GlukkonSwitch.cpp
    ../AliveLibAE/Bullet.hpp
    ../AliveLibAE/Bullet.cpp
    ../AliveLibAE/CrawlingSligButton.hpp
    ../AliveLibAE/CrawlingSligButton.cpp
    ../AliveLibAE/SligGetPantsAndWings.hpp
    ../AliveLibAE/SligGetPantsAndWings.cpp
    ../AliveLibAE/BoomMachine.hpp
    ../AliveLibAE/BoomMachine.cpp
    ../AliveLibAE/Meat.hpp
    ../AliveLibAE/Meat.cpp
    ../AliveLibAE/MeatSack.hpp
    ../AliveLibAE/MeatSack.cpp
    ../AliveLibAE/Grenade.hpp
    ../AliveLibAE/Grenade.cpp
    ../AliveLibAE/Bone.hpp
    ../AliveLibAE/Bone.cpp
    ../AliveLibAE/BoneBag.hpp
    ../AliveLibAE/BoneBag.cpp
    ../AliveLibAE/Rock.hpp
    ../AliveLibAE/Rock.cpp
    ../AliveLibAE/RockSack.hpp
    ../AliveLibAE/RockSack.cpp
    ../AliveLibAE/SligSpawner.hpp
    ../AliveLibAE/SligSpawner.cpp
    ../AliveLibAE/ScrabSpawner.hpp
    ../AliveLibAE/ScrabSpawner.cpp
    ../AliveLibAE/SlogSpawner.hpp
    ../AliveLibAE/SlogSpawner.cpp
    ../AliveLibAE/GameEnderController.hpp
    ../AliveLibAE/GameEnderController.cpp
    ../AliveLibAE/Shrykull.hpp
    ../AliveLibAE/Shrykull.cpp
    ../AliveLibAE/ParamiteWeb.hpp
    ../AliveLibAE/ParamiteWeb.cpp
    ../AliveLibAE/ParamiteWebLine.hpp
    ../AliveLibAE/ParamiteWebLine.cpp
    ../AliveLibAE/ExplosionSet.hpp
    ../AliveLibAE/ExplosionSet.cpp
    ../AliveLibAE/ColourfulMeter.hpp
    ../AliveLibAE/ColourfulMeter.cpp
    ../AliveLibAE/MinesAlarm.hpp
    ../AliveLibAE/MinesAlarm.cpp
    ../AliveLibAE/SecurityDoor.cpp
    ../AliveLibAE/SecurityDoor.hpp
    ../AliveLibAE/LaughingGas.cpp
    ../AliveLibAE/LaughingGas.hpp
    ../AliveLibAE/MudokonEnums.hpp
    ../AliveLibAE/BoomMachinePipe.hpp
    ../AliveLibAE/BoomMachinePipe.cpp
)

SET(renderer_src
    Renderer/IRenderer.hpp
    Renderer/IRenderer.cpp
    Renderer/Vulkan/VulkanRenderer.hpp
    Renderer/Vulkan/VulkanRenderer.cpp
    Renderer/Vulkan/Batcher.hpp
    Renderer/Vulkan/Batcher.cpp
    Renderer/DirectX9/DirectX9Renderer.hpp
    Renderer/DirectX9/DirectX9Renderer.cpp
    Renderer/PaletteCache.hpp
    Renderer/TextureCache.hpp
    Renderer/OpenGL3/GLContext.hpp
    Renderer/OpenGL3/GLContext.cpp
    Renderer/OpenGL3/GLDebug.hpp
    Renderer/OpenGL3/GLDebug.cpp
    Renderer/OpenGL3/GLFramebuffer.hpp
    Renderer/OpenGL3/GLFramebuffer.cpp
    Renderer/OpenGL3/GLShader.hpp
    Renderer/OpenGL3/GLShader.cpp
    Renderer/OpenGL3/GLShaderProgram.hpp
    Renderer/OpenGL3/GLShaderProgram.cpp
    Renderer/OpenGL3/GLTexture2D.hpp
    Renderer/OpenGL3/GLTexture2D.cpp
    Renderer/OpenGL3/OpenGLRenderer.hpp
    Renderer/OpenGL3/OpenGLRenderer.cpp
    Renderer/OpenGL3/Shaders/ShaderPassthru.cpp
    Renderer/OpenGL3/Shaders/ShaderPsx.cpp
    Renderer/SDL2/Sdl2Context.hpp
    Renderer/SDL2/Sdl2Context.cpp
    Renderer/SDL2/Sdl2Renderer.hpp
    Renderer/SDL2/Sdl2Renderer.cpp
    Renderer/SDL2/Sdl2Texture.hpp
    Renderer/SDL2/Sdl2Texture.cpp
)

SET(sound_src
    Sound/PsxSpuApi.cpp
    Sound/PsxSpuApi.hpp
    Sound/Midi.cpp
    Sound/Midi.hpp
    Sound/Sound.cpp
    Sound/Sound.hpp
    Sound/Reverb.hpp
    Sound/Reverb.cpp
    Sound/SoundDSound.cpp
    Sound/SoundDSound.hpp
    Sound/SoundSDL.hpp
    Sound/SoundSDL.cpp
    Sound/SDLSoundBuffer.hpp
    Sound/SDLSoundBuffer.cpp
    Sound/SDLSoundSystem.hpp
    Sound/SDLSoundSystem.cpp
)

SET(game_objects_src
    GameObjects/BaseGameObject.hpp
    GameObjects/BaseGameObject.cpp
    GameObjects/BaseAnimatedWithPhysicsGameObject.hpp
    GameObjects/BaseAnimatedWithPhysicsGameObject.cpp
    GameObjects/EffectBase.hpp
    GameObjects/EffectBase.cpp
    GameObjects/BaseAliveGameObject.hpp
    GameObjects/BaseAliveGameObject.cpp
    GameObjects/Flash.hpp
    GameObjects/Flash.cpp
    GameObjects/Particle.cpp
    GameObjects/Particle.hpp
    GameObjects/ScreenManager.cpp
    GameObjects/ScreenManager.hpp
    GameObjects/ShadowZone.hpp
    GameObjects/ShadowZone.cpp
    GameObjects/Leaf.hpp
    GameObjects/Leaf.cpp
    GameObjects/ScreenShake.hpp
    GameObjects/ScreenShake.cpp
    GameObjects/Spark.hpp
    GameObjects/Spark.cpp
    GameObjects/ScreenClipper.hpp
    GameObjects/ScreenClipper.cpp
    GameObjects/BackgroundMusic.hpp
    GameObjects/BackgroundMusic.cpp
    GameObjects/SnoozeParticle.hpp
    GameObjects/SnoozeParticle.cpp
    GameObjects/ZzzSpawner.hpp
    GameObjects/ZzzSpawner.cpp
    GameObjects/Fade.hpp
    GameObjects/Fade.cpp
    GameObjects/ZapLine.hpp
    GameObjects/ZapLine.cpp
    GameObjects/ZapSpark.hpp
    GameObjects/ZapSpark.cpp
    GameObjects/BulletShell.hpp
    GameObjects/BulletShell.cpp
    GameObjects/CircularFade.hpp
    GameObjects/CircularFade.cpp
    GameObjects/Blood.hpp
    GameObjects/Blood.cpp
    GameObjects/BackgroundAnimation.hpp
    GameObjects/BackgroundAnimation.cpp
    GameObjects/Gibs.hpp
    GameObjects/Gibs.cpp
    GameObjects/Dove.hpp
    GameObjects/Dove.cpp
    GameObjects/DeathBirdParticle.hpp
    GameObjects/DeathBirdParticle.cpp
    GameObjects/ParticleBurst.hpp
    GameObjects/ParticleBurst.cpp
    GameObjects/GroundExplosion.hpp
    GameObjects/GroundExplosion.cpp
    GameObjects/AirExplosion.hpp
    GameObjects/AirExplosion.cpp
    GameObjects/DeathGas.hpp
    GameObjects/DeathGas.cpp
    GameObjects/GasEmitter.hpp
    GameObjects/GasEmitter.cpp
    GameObjects/ThrowableTotalIndicator.hpp
    GameObjects/ThrowableTotalIndicator.cpp
    GameObjects/OrbWhirlWind.cpp
    GameObjects/OrbWhirlWind.hpp
    GameObjects/IBirdPortal.cpp
    GameObjects/IBirdPortal.hpp
    GameObjects/BirdPortalTerminator.cpp
    GameObjects/BirdPortalTerminator.hpp
    GameObjects/PlatformBase.cpp
    GameObjects/PlatformBase.hpp
    GameObjects/BaseThrowable.cpp
    GameObjects/BaseThrowable.hpp
    GameObjects/PossessionFlicker.hpp
    GameObjects/PossessionFlicker.cpp
    GameObjects/Mine.hpp
    GameObjects/Mine.cpp
    GameObjects/TimedMine.hpp
    GameObjects/TimedMine.cpp
    GameObjects/Alarm.hpp
    GameObjects/Alarm.cpp
)

SET(data_conversion_src
    data_conversion/guid.cpp
    data_conversion/guid.hpp
    data_conversion/data_conversion.hpp
    data_conversion/data_conversion.cpp
    data_conversion/file_system.hpp
    data_conversion/file_system.cpp
    data_conversion/AnimationConverter.hpp
    data_conversion/AnimationConverter.cpp
    data_conversion/relive_tlvs.hpp
    data_conversion/relive_tlvs_conversion.hpp
    data_conversion/relive_tlvs_serialization.hpp
    data_conversion/PathTlvsAE.hpp
    data_conversion/PathTlvsAO.hpp
    data_conversion/AnimConversionInfo.hpp
    data_conversion/AnimConversionInfo.cpp
    data_conversion/PNGFile.hpp
    data_conversion/PNGFile.cpp
    data_conversion/AESaveConverter.hpp
    data_conversion/AESaveConverter.cpp
    data_conversion/AESaveSerialization.hpp
    data_conversion/AOSaveSerialization.hpp
    data_conversion/data_conversion_ui.hpp
    data_conversion/data_conversion_ui.cpp
    data_conversion/fmv_converter.cpp
    data_conversion/fmv_converter.hpp
    data_conversion/LvlReaderWriter.hpp
    data_conversion/CommonTypesSerialization.hpp
    data_conversion/TLVConverter.hpp
)

source_group("Source Files/AE"               FILES ${AliveLibAESrc})
source_group("Source Files/AO"               FILES ${AliveLibSrcAO})
source_group("Source Files/Renderer"         FILES ${renderer_src})
source_group("Source Files/Sound"            FILES ${sound_src})
source_group("Source Files/GameObjects"      FILES ${game_objects_src})
source_group("Source Files/data_conversion"  FILES ${data_conversion_src})

SET(relive_lib_src
    # because relive_lib uses some parts of AliveLibAE and 
    # AliveLibAO it means they have to be compiled as a single lib
    # this can be changed back once the bottom level classes are made common
    # and only the per game objects live in the AO/AE libs
    ${AliveLibAESrc}
    ${AliveLibSrcAO}
    ${renderer_src}
    ${sound_src}
    ${game_objects_src}
    ${data_conversion_src}
    # temp hack to use these bits of the api for the data conversion
    ../Tools/relive_api/Base64.cpp
    ../Tools/relive_api/CamConverter.cpp
    ../Tools/relive_api/CamConverter.hpp
    ../Tools/relive_api/ApiFG1Reader.cpp
    ../Tools/relive_api/ApiFG1Reader.hpp
    CommandLineParser.hpp
    BinaryPath.hpp
    BinaryPath.cpp
    SwitchStates.hpp
    SwitchStates.cpp
    FG1.hpp
    FG1.cpp
    Camera.cpp
    Camera.hpp
    Sfx.hpp
    Sfx.cpp
    ObjectIds.hpp
    ObjectIds.cpp
    DynamicArray.hpp
    DynamicArray.cpp
    Events.hpp
    Events.cpp
    GameType.hpp
    GameType.cpp
    ResourceManagerWrapper.hpp
    ResourceManagerWrapper.cpp
    MapWrapper.hpp
    MapWrapper.cpp
    PsxDisplay.cpp
    PsxDisplay.hpp
    Compression.hpp
    Compression.cpp
    Math.hpp
    Math.cpp
    Collisions.hpp
    Collisions.cpp
    AnimationBase.cpp
    AnimationBase.hpp
    Primitives.hpp
    Primitives.cpp
    Animation.cpp
    Animation.hpp
    AnimationUnknown.cpp
    AnimationUnknown.hpp
    Shadow.hpp
    Shadow.cpp
    Engine.hpp
    Engine.cpp
    Layer.hpp
    stdafx.h
    ObjectTypes.hpp
    Clamp.hpp
    Types.hpp
    Masher.hpp
    Masher.cpp
    FatalError.hpp
    FatalError.cpp
    masher_tables.hpp
    RGB16.hpp
    CamDecompressor.cpp
    CamDecompressor.hpp
    BaseGameAutoPlayer.cpp
    BaseGameAutoPlayer.hpp
    PtrStream.hpp
    CompressionType_4Or5.cpp
    CompressionType_4Or5.hpp
    W32CrashHandler.hpp
    BitField.hpp
    FG1Reader.hpp
    PSXMDECDecoder.cpp
    PSXMDECDecoder.h
    PSXADPCMDecoder.cpp
    PSXADPCMDecoder.h
    PathDataExtensionsTypes.hpp
    vlctable.hpp
    AnimResources.hpp
    AnimResources.cpp
    logger.hpp
    AddPointer.hpp
    Function.hpp
    Sys.hpp
    Sys.cpp
    Psx.hpp
    Psx.cpp
    FixedPoint.hpp
    FixedPoint.cpp
    ScopedSeq.hpp
    ScopedSeq.cpp
    AmbientSound.hpp
    AmbientSound.cpp
    OrbWhirlWindParticle.hpp
    OrbWhirlWindParticle.cpp
    Grid.hpp
    Grid.cpp
)

add_library(relive_lib ${relive_lib_src})

if (MSVC)
# for UuidCreate()
target_link_libraries(relive_lib Rpcrt4)
endif()

target_include_directories(relive_lib PUBLIC
    $<BUILD_INTERFACE:
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty
    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/aom
    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/aom/third_party/libwebm
    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/json/single_include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/DX9_SDK_Aug09/Include>
    $<INSTALL_INTERFACE:include>
    PRIVATE src ${CMAKE_BINARY_DIR})

target_compile_definitions(relive_lib PRIVATE "_CRT_SECURE_NO_WARNINGS")
target_compile_definitions(relive_lib PRIVATE "JSON_DISABLE_ENUM_SERIALIZATION=1")

if (MSVC)
    target_compile_options(relive_lib PRIVATE /W4 /wd4996 /WX /MP)
endif()

target_compile_features(relive_lib
    PRIVATE cxx_strong_enums
    PRIVATE cxx_static_assert
    PRIVATE cxx_lambdas
    PRIVATE cxx_nullptr
    PRIVATE cxx_range_for
    PRIVATE cxx_decltype
    PRIVATE cxx_auto_type
    PRIVATE cxx_variadic_templates)

if (MINGW)
    set(WIN32_LIBS "imm32")
else()
    if (WIN32)
        set(WIN32_LIBS
            Winmm
            dsound
            xinput
        )
    endif()
endif()

target_link_libraries(relive_lib
    shelf-pack-cpp
    project_warnings
    spng
    miniz
    aom
    webm
    aom_common_app_util
    Cinder
    libglew_static
    imgui
    glm
    volk
    Vulkan::Headers
    ${WIN32_LIBS}
    ${SDL2_LIBRARIES}
    )

if (WIN32)
    if (CMAKE_SIZEOF_VOID_P EQUAL 4)
        target_link_libraries(relive_lib ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/DX9_SDK_Aug09/Lib/x86/D3dx9.lib)
    else()
        target_link_libraries(relive_lib ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/DX9_SDK_Aug09/Lib/x64/D3dx9.lib)
    endif()
endif()

export(TARGETS relive_lib FILE relive_lib.cmake)
